# snapmag

./: .gitignore  .stylelintrc.json  README.md  generate-icons.js  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  image_manager.rs  lib.rs  main.rs  types.rs
src/components/: ContextMenu.tsx  ImageCard.tsx  ImageLightbox.tsx
src/services/: api.ts
