[package]
name = "app"
version = "0.1.0"
description = "SnapMag - A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tray-icon = "0.19"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Shell"] }
winapi = { version = "0.3", features = ["winuser", "synchapi", "errhandlingapi", "winerror", "handleapi"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
image = "0.25"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
